--- a/azure/src/app/login/login.page.html
+++ b/azure/src/app/login/login.page.html
@@ -10,7 +10,7 @@
         </ion-row>
       </ion-grid>
 
-      <h1>Login</h1>
+      <h1>LoginMODE</h1>
       <input type="text" name="" placeholder="Username">
       <input type="password" name="" placeholder="Password">
       <input (click)="openHome()" type="submit" name="" value="Login">
